--- a/src/styles/reset.css
+++ b/src/styles/reset.css
@@ -42,7 +42,7 @@ button {
 ul { list-style: none; margin: 0; padding: 0; }
 
 /* 為了方便排版時辨識超連結位置，暫時加上底線，之後再拿掉 */
-a { text-decoration: underline orange; color: inherit; }
+a { text-decoration:none; color: inherit; }
 
 
 /* a:hover{
