--- a/src/pages/News/News.module.css
+++ b/src/pages/News/News.module.css
@@ -1,3 +1,75 @@
 .placeholder {
     font-style: italic;
 }
+
+.title {
+    font-size:5rem;
+    text-align: center;
+    padding: 1.2rem 0px;
+}
+
+.padding {
+    padding: 1rem 6rem;
+}
+
+.shelf{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-auto-rows: minmax(20rem, auto);
+    gap: 4rem;
+    justify-content: center;
+    align-items: start;
+
+}
+
+.piece div{
+    margin: 0.5rem 0px;
+}
+
+.img43 {
+  aspect-ratio: 4 / 3;
+  width: 100%;
+  background: #eee;
+  overflow: hidden;
+  align-items: center;
+  justify-content: center;
+}
+.img43 img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  display: block;
+}
+
+.date {
+    font-size:1.2rem;
+    color:#d1d1d1;
+}
+
+.headline{
+    font-size:1.92rem;
+    color: white;
+}
+
+.content{
+    font-size:1.2rem;
+    color: white;
+}
+
+.switch_page{
+    color: #FFDD75;
+    margin-top: 3rem;
+    text-align:right;
+}
+
+.news_nav_bar{
+    display: flex;
+    color: #FFDD75;
+    margin-top: 3rem;
+    text-decoration: underline;
+    justify-content:center;
+}
+
+.news_nav_bar_item{
+    margin: 0px 10rem;
+}
