--- a/src/pages/News/News.module.css
+++ b/src/pages/News/News.module.css
@@ -1,15 +1,11 @@
-.placeholder {
-    font-style: italic;
-}
-
 .title {
     font-size:5rem;
     text-align: center;
     padding: 1.2rem 0px;
 }
 
-.padding {
-    padding: 1rem 6rem;
+.marginLR {
+    margin: 0px 6rem;
 }
 
 .shelf{
@@ -22,9 +18,18 @@
 
 }
 
-.piece div{
+
+.piece > div{
     margin: 0.5rem 0px;
 }
+
+@media (max-width: 800px) {
+    .shelf {
+        grid-template-columns: 1fr;
+    }
+}
+
+
 
 .img43 {
   aspect-ratio: 4 / 3;
@@ -58,18 +63,39 @@
 
 .switch_page{
     color: #FFDD75;
-    margin-top: 3rem;
+    margin-top: 2rem;
     text-align:right;
+    font-size: 1.92rem;
 }
+.switch_page:hover{
+    cursor: pointer;
+}
+
 
 .news_nav_bar{
     display: flex;
-    color: #FFDD75;
-    margin-top: 3rem;
-    text-decoration: underline;
+    flex-wrap: wrap;
+    margin: 2rem 0px;
+    gap: 0px 2rem;
+    font-size: 1.56rem;
     justify-content:center;
+    text-align: center;;
 }
 
-.news_nav_bar_item{
-    margin: 0px 10rem;
+@media(max-width: 800px){
+    .news_nav_bar > div{
+    width: 100%
+    }
 }
+
+.news_nav_bar button{
+    color: #FFDD75;
+    text-decoration: underline;
+}
+
+.news_nav_bar > button:hover{
+    cursor: pointer;
+}
+
+
+
