--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,12 +1,16 @@
 /* First layer */
+
 .header {
+    /* Let circle_background in ProjectColumn.jsx stretch to header*/
+    position: relative;
+    z-index: 10;
 
     --element-space: 1.6rem;
     --font-size: 1.4em;
 
     height: auto;
     width: 100vw;
-    background-color: #1F296F;
+    background-color: transparent;
     display:flex;
     justify-content: space-between;
     padding: var(--element-space) 0px;
