Add a favicon and make backup image when no corresponding news cover

--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -10,12 +10,23 @@
 
     height: auto;
     width: 100vw;
-    background-color: transparent;
     display:flex;
     justify-content: space-between;
     padding: var(--element-space) 0px;
 
 }
+
+/* Change background depending on the location(page) */
+/* TODO: Add class and its background color of each page*/
+.project_column{
+    background-color: transparent;
+}
+
+.not_project_column{
+    background-color: #121732;
+}
+
+
 
 /* second layer */
 /* Left side */
