--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -1,5 +1,5 @@
 .footer {
-    background-color: #17181A;
+    background-color: #0E133F;
     padding: 5rem 10rem;
     min-height: 100%;
 
@@ -22,7 +22,7 @@
 
 .heading {
     font-size: 1.5rem;
-    color: #CDA514;
+    color: #FFC23A;
     margin-bottom: 0.2rem;
 }
 
@@ -34,7 +34,7 @@
     margin-right: auto;
     border: 0px;
     height:2.5px;
-    background-color: #7D7B5B;
+    background-color: #FFC23A;
 }
 
 /* Section 1 */ 
@@ -68,7 +68,7 @@
 
 
 .p {
-    color: #D5D5D5;
+    color: #B1B3BD;
     width:auto;
     height: auto;
     font-size: 1.5em;
@@ -84,7 +84,7 @@
 /* link */
 .li {
     font-size: 1.5em;
-    color: #B7B7B7;
+    color: #ffffff;
     text-decoration-line: underline;
     text-underline-offset: 4px;
     margin: 0.6rem 0px;
@@ -102,7 +102,7 @@
     justify-content: flex-start;
     flex-wrap: wrap;
     /* color of text */
-    color: #9D821D;
+    color: #FFFFFF;
     flex-direction: row;
 }
 
@@ -167,14 +167,14 @@
     min-height: 2.5rem;
     max-height: 2.5rem;
     /* color of icon (otherwise they inherite from <button>) */
-    color: #9D821D;
+    color: #CDD3FE;
 }
 
 
 /* Section 3 */
 .fine{
     font-size: 0.8rem;
-    color: #BABABA;
+    color: #B1B3BD;
     display:flex;
     flex-wrap: wrap;
     justify-content: space-between;
