--- a/src/pages/Projects/Projects.module.css
+++ b/src/pages/Projects/Projects.module.css
@@ -1,4 +1,7 @@
-
+.back{
+    background-color: #364DFA;
+    color: #ffffff;
+}
 
 /* First level */
 .marginLR {
@@ -16,6 +19,7 @@
     font-size:5rem;
     text-align: center;
     padding: 1.2rem 0px;
+
 }
 
 @media (max-width: 768px) {
@@ -32,6 +36,7 @@
 
 .shelf{
     display: grid;
+    padding: 1.2rem 0px;
     grid-template-columns: 1fr 1fr 1fr;
     grid-auto-rows: minmax(20rem, auto);
     gap: 4rem;
@@ -54,7 +59,7 @@
 .img43 {
   aspect-ratio: 4 / 3;
   width: 100%;
-  background: #eee;
+  background: #ffffff;
   overflow: hidden;
   align-items: center;
   justify-content: center;
@@ -68,12 +73,10 @@
 
 .headline{
     font-size:1.92rem;
-    color: white;
     text-align: center;
 }
 
 .content{
     font-size:1.2rem;
-    color: white;
     text-align: center;
 }
