--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -9,20 +9,12 @@
     --font-size: 1.4em;
 
     height: auto;
-    width: 100vw;
+    width: 100%;
     display:flex;
     justify-content: space-between;
     padding: var(--element-space) 0px;
 
 }
-
-
-
-
-
-
-
-
 
 /* second layer */
 /* Left side */
@@ -39,7 +31,7 @@
 
 
 .nav_bar a{
-    margin-left: var(--element-space);
+    padding-left: var(--element-space);
     display: flex;
     align-items: center;
     font-size: var(--font-size);
@@ -77,34 +69,35 @@
     cursor: pointer;
     align-items: center;
     margin-left: calc(var(--element-space)/3);
-    color: white;
+    color: #ffffff;
     width: 48px;
     height: 48px;
     padding: 0;
-
 }
+
+
 .menu_icon svg {
     width: 100%;
     height: 100%;
+    
 }
 .mobile_menu {
     position: absolute;
-    top: 5.5rem;
+    top: 6.8rem;
     left: 0;
-    width: 100vw;
-    background: #1F296F;
+    width: 100%;
+    background: #9ba6fb;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
     z-index: 100;
-    box-shadow: 0 2px 8px rgba(0,0,0,0.15);
+    box-shadow: 0 2px 8px rgba(0,0,0,0.5);
 }
 .mobile_menu a {
     color: white;
-    padding: 1.2rem 0;
+    padding: 1.2rem var(--element-space);
     text-align: left;
     text-decoration: none;
-    border-bottom: 1px solid #2a357a;
     width: 100%;
 }
 @media (max-width: 700px) {
@@ -116,7 +109,6 @@
     }
 }
 
-/* TODO: Change mobile menu color */
 
 .project_column{
     background-color: transparent;
@@ -130,6 +122,12 @@
 }
 .news .nav_bar a:hover{
     text-decoration-color: #364dfa;
+}
+.news .menu_icon{
+    color: #364DFA;
+}
+.news .mobile_menu a:hover{
+    text-decoration-color: #ffffff;
 }
 
 
@@ -152,12 +150,18 @@
 .members .nav_bar a:hover{
     text-decoration-color: #364dfa;
 }
+.members .menu_icon{
+    color: #364DFA
+}
+.members .mobile_menu a:hover{
+    text-decoration-color: #ffffff;
+}
 
 
 .homepage {
     background-color: #364DFA;
     color: #ffffff;
-} 
+}
 
 
 
