--- a/src/components/ScrollToTop/ScrollToTop.module.css
+++ b/src/components/ScrollToTop/ScrollToTop.module.css
@@ -1,6 +1,7 @@
 .page_wrapper {
-  transition: opacity 1s ease-in-out;
-  opacity: 0;                          /* 起點 */
+  /* transition: opacity 1s ease-in-out; */
+  /* 暫時取消效果，若要恢復，請改為 0 */
+  opacity: 1;                          /* 起點 */
 }
 .page_wrapper.visible {
   opacity: 1;                          /* 終點 */
