--- a/src/pages/News/News.module.css
+++ b/src/pages/News/News.module.css
@@ -2,6 +2,12 @@
   margin: 0px 6rem;
 }
 
+@media (max-width: 1024px) {
+ .marginLR{
+  margin: 0px 4.5rem;
+ }
+} 
+
 @media (max-width: 768px) {
  .marginLR{
   margin: 0px 3rem;
@@ -24,7 +30,7 @@
 .shelf{
     display: grid;
     padding: 1.2rem;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: repeat(3, minmax(0, 1fr));
     grid-auto-rows: minmax(20rem, auto);
     gap: 4rem;
     justify-content: center;
@@ -66,11 +72,13 @@
 .headline{
     font-size:1.92rem;
     color: #364DFA;
+    hyphens: auto;
 }
 
 .content{
     font-size:1.2rem;
     color: #364DFA;
+    hyphens: auto;
 }
 
 .switch_page{
