--- a/src/pages/ProjectColumn/ProjectColumn.module.css
+++ b/src/pages/ProjectColumn/ProjectColumn.module.css
@@ -69,7 +69,7 @@
     /* Ensure the SVG stays its original size */
     width: 55px;
     height: 55px;
-    color: #000;
+    color: #0e133f
 }
 
 
@@ -137,7 +137,11 @@
   .L { font-size: 3rem} 
   .M { font-size: 2.5rem }
   .S { font-size: 1.5rem}
-  .XS { font-size:1rem}
+  .XS { font-size:1.5rem}
+
+  .subtitle{
+    font-size: 1.2rem;
+  }
 } 
 
 @media (max-width: 400px) {
@@ -152,7 +156,7 @@
   .L { font-size: 2rem} 
   .M { font-size: 1.5rem }
   .S { font-size: 1.2rem}
-  .XS { font-size:1rem}
+  .XS { font-size:1.2rem}
 
   .subtitle{
     font-size: 1rem;
@@ -220,8 +224,8 @@
   margin: 0 0 1rem;
   padding-left: 1rem;
   border-left: 3px solid #ddd;
-  color: #000;
-  background: #fafafa;
+  color: #9BA6FD;
+  background: #f6f8fa;
 }
 
 /* code & pre */
