--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -19,7 +19,7 @@
 /* second layer */
 /* Left side */
 .nav_bar{
-    width: 100vw;
+    width: 100%;
     display:flex;
     justify-content: flex-start;
     align-items: center;
