--- a/src/pages/Projects/Projects.module.css
+++ b/src/pages/Projects/Projects.module.css
@@ -42,7 +42,7 @@
 
 .shelf{
     display: grid;
-    padding: 1.2rem 0px;
+    padding: 4.8rem 0px;
     grid-template-columns: repeat(3, minmax(0, 1fr));
     grid-auto-rows: minmax(20rem, auto);
     gap: 4rem;
@@ -69,6 +69,7 @@
   overflow: hidden;
   align-items: center;
   justify-content: center;
+  border-radius: 12px;
 }
 .img43 img {
   width: 100%;
